--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Strategic Insight Lead</h3>
                             <div class="subheading mb-3">National Grid ESO, Strategy and Policy</div>
-                                <p> Main tasks include: </p>
+                                <p> Main tasks/achievements include: </p>
                                 <ul>
-                                    <li> Serving as Interim Insights and Stakeholder Manager within Aug. - Nov. 2024. Main focus: team supervision, strategic design for stakeholder engagement and growth of FES, strategic alignment with the other network planning processes, leading the FES 25 methodology document.</li>
+                                    <li> Served as Interim Insights and Stakeholder Manager within Aug. - Nov. 2024. Main focus: team leadership, strategic design of growth of FES, strategic alignment with the other network planning processes, led the FES 25 methodology document.</li>
                                     <li> Engaging with various units across the business to develop, write and publish the Future Energy Scenarios (FES) for the years 2023, 2024 and 2025</li>
                                     <li> Leading on data analysis and insights with focus on supply side generation modelling and flexibility </li> 
-                                    <li> Leading/Coordinating the stakeholder engagement and flexibility dissemination activities regarding FES </li>
+                                    <li> Leading/Coordinating the stakeholder engagement and dissemination activities regarding FES' supply side and whole system flexibility </li>
                                     <li> Advanced data visualisation with Python (matplotlib, plotly, seaborn, dash) </li>
-                                    <li> Help design the techno-economic dataset needs for PLEXOS for unit-commitment of future possible credible pathways to 2035/2050 </li>
+                                    <li> Helped design the techno-economic dataset needs for PLEXOS for unit-commitment of future possible credible pathways to 2035/2050 </li>
                                     <li> Event lead of NESO's Women's Network </li>
                                 </ul>
                         </div>
@@ -86,14 +86,13 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Lead Research Engineer</h3>
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
-                                <p> Main tasks include: </p>
+                                <p> Main tasks/achievements included: </p>
                                 <ul> 
-                                    <li>Manage BEIS-funded projects regarding long-duration energy storage (LDES). The projects include lithium-based batteries co-located with vanadium flow batteries and renewables, adiabatic compressed-air energy storage utilising EDF's gas storage facilities and hydrogen stored in depleted uranium hydride, combined with fuel cells </li>
-                                    <li>Technical lead at all work packages regarding business models and revenue estimation for the above projects</li>
-                                    <li>Develop and maintain optimisation Python tools for hydrogen storage and battery storage valuations</li>
-                                    <li>Electricity price forecasting in the long-term for different Future Energy Scenarios</li>
-                                    <li>EDF Women's Network Digital Lead: Maintain and update EDF Women's Network social media and website to promote inclusion and diversity matters</li>
-                                    <li>Mentor, supervise and coach new and existing team members</li>
+                                    <li>Led three BEIS-funded projects regarding long-duration energy storage (LDES). The projects include lithium-based batteries co-located with vanadium flow batteries and renewables, adiabatic compressed-air energy storage utilising EDF's gas storage facilities and hydrogen stored in depleted uranium hydride, combined with fuel cells </li>
+                                    <li>Product owner of R&D’s python tools for electric vehicle, hydrogen and battery storage valuations. Paper on hybrid storage systems successfully won position to be presented in CIGRE Paris Showcase 2022</li>
+                                    <li>Successfully deployed long-term electricity price forecasting for short-term markets utilising price spreading algorithms for different EDF long-term scenarios</li>
+                                    <li>EDF Women's Network Digital Lead: Maintained and updated EDF Women's Network social media and website to promote inclusion and diversity matters</li>
+                                    <li>Onboarded junior research engineers, mentored and supervised existing team members</li>
                                 </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">December 2021 - September 2022</span></div>   
@@ -102,11 +101,11 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research Engineer</h3>
                             <div class="subheading mb-3">EDF Energy UK R&D</div>
-                                <p> Main tasks include: </p>
+                                <p> Main tasks/achievements included: </p>
                                 <ul> 
-                                    <li> Engaging with various units across the business to gather data and project requirements, bid preparation and submission (BEIS, IUK)</li>
-                                    <li> Responsible for developing optimisation Python tools to optimally value energy storage assets co-located with renewable generation, when participating in various electricity markets -- examples include day-ahead and intraday markets, frequency response markets, balancing mechanism and high non-energy cost avoidance </li>
-                                    <li> Workflow automation, integration and data management of existing forecasting tools (data scrapping, database record manipulation, shell/batch scripting, deployment in AWS, testing in operational conditions)</li>
+                                    <li> Led engagement to gather data and project requirements for bid preparation and submission (BEIS, Innovate UK): successfully won three bids</li>
+                                    <li> Led the development of optimisation Python tools to optimally value energy storage assets co-located with renewable generation, when participating in various electricity markets -- examples include day-ahead and intraday markets, frequency response markets, balancing mechanism and high non-energy cost avoidance </li>
+                                    <li> Successful workflow automation, integration and data management of existing forecasting tools (data scrapping, database record manipulation, shell/batch scripting, deployment in AWS, testing in operational conditions, efficient documentation)</li>
                                     <li> Data collection and analysis of electricity price profiles, used to better inform arbitrage strategies for energy storage assets</li>
                                 </ul>
                         </div>
@@ -118,11 +117,12 @@
                             <div class="subheading mb-3">Energy Systems Catapult</div>
                             <ul>
                                 <li> Worked as part of the system integration and innovation team to develop the EnergyPath Operations simulation tool to assess system design choices and business models in dynamic future energy system architectures, in different operational time-frames and from local to national scale- Data analysis (Python) of the Future Energy Scenarios of National Grid aiming at informing future supply and demand figures of a merit-order dispatch model built to simulate electricity prices for future years </li>
-                                <li> Analysis of battery degradation data from the Consumer, Vehicle and Energy Integration project to investigate the profitability of the business case of second life batteries as part of the Innovate UK Technology Benchmarking project </li>
+                                <li> Lead analyst of battery degradation data from the Consumer, Vehicle and Energy Integration project to investigate the profitability of the business case of second life batteries as part of the Innovate UK Technology Benchmarking project </li>
                                 <li> Examined if alternative (non-battery) storage technologies, like pumped heat, compressed or liquid air energy storage, can lead to reduced system costs in future electricity systems with high penetration of renewable sources, heat pumps and electric vehicles </li>
                                 <li> Worked as part of the Modern Energy Partners to construct dynamic time-of-use profiles and to develop relevant calculators to understand their effect on the bills of commercial sites </li>
                                 <li> Investigated the quantification and optimisation of multiple revenue streams (trading in the wholesale market, participation in the balancing mechanism, avoidance of high network charges, ancillary service provision) from batteries installed in non-domestic commercial sites (implemented with receding horizon model predictive control in MATLAB)</li>
                                 <li> Investigated if energy suppliers can reduce their costs by taking advantage of their customers’ flexibility through a heat-as-a-service model (implemented in MATLAB and Simulink)</li>
+                                <li> Worked closely with the Market, Policy and Regulation team to identify barriers in all the business cases examined as well as in the Distribution System Operator (DSO) transition</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2019 - May 2020</span></div>
