--- a/index.html
+++ b/index.html
@@ -374,8 +374,9 @@
                     <h2 class="mb-5">Presentations</h2>
                     <p>Energy-storage and low-carbon technologies related presentations</p>
                     <ol>
-                        <li> The role of supply-side flexibility via electricity storage and interconnectors in future power grids, <a href= https://www.imeche.org/events/decarbonisepowerstore"> Decarbonise, Power and Store Conference</a>, Manchester, April 2025. </li>
-                        <li> The role of grid-scale electricity storage in future power networks, <a href=https://www.tferf.org/"> Fuel and Energy Research Forum</a>, Sheffield, April 2025. </li>
+                        <li> Potential Applications of Energy Storage in Networks, <a href=https://cigre.org.uk/uk-news/cigre-uk-sc-c1-technical-liaison-meeting/"> Cigre C1 Technical Liaison Meeting</a>, Birmingham, April 2025.</li>
+                        <li> The role of supply-side flexibility via electricity storage, dispatchable generation and interconnectors in future power grids, <a href= https://www.imeche.org/events/decarbonisepowerstore"> Decarbonise, Power and Store Conference</a>, Manchester, April 2025. </li>
+                        <li> The role of grid-scale electricity storage for flexibility provision in future power networks, <a href=https://www.tferf.org/"> Fuel and Energy Research Forum</a>, Sheffield, April 2025. </li>
                         <li> Part of Electricity Storage Panel at the University of Manchester Alumni Power and Energy Event, September 2024. </li>
                         <li> Official launch of the Future Energy Scenarios 2024, led supply side generation and flexibility insights, July 2024. </li>                        
                         <li> How should electricity markets change to accommodate the Net Zero transition?, at the City University of London, December 2023. </li>
