--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:angeliki.loukatou@nationalgrideso.com">kelly.loukatou@nationalenergyso.com</a>
                     </div>
-                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as a Strategic Insight Lead at the National Energy System Operator in the UK, developing their Future Energy Scenarios and understanding all the interactions with the other Strategic Network Planning Processes. I am also a Chartered Engineer with the IET, for which I am also a Professional Registration Advisor. I am the Event Lead of Women's Network within NESO. Prior to NESO, I was working as a Lead Research Engineer at the R&D Department of EDF Energy in the UK. There, I specialised in designing algorithms to optimally invest or dispatch standalone or co-located battery storage assets with solar generation and/or load, when participating in multiple electricity markets. Before that, I was a Modelling Analyst at Energy Systems Catapult, working as part of their system integration and innovation team, modelling energy storage, second-life batteries and long-term electricity price forecasting for short-term markets. I hold a PhD from the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). My PhD research was centered around investment and optimal dispatch of battery storage assets, when co-located with wind generation. For the past two years, I have been the Industry Chair of UK's IET Energy Storage conference, part of the Powering Net Zero Series. I have a passion about diversity and inclusion, as well as good coding and data practices, and therefore I hold many relevent volunteering roles within and outside NESO.</p>
+                    <p class="lead mb-5">Most of the people I know call me Kelly. I currently work as a Technical Lead at the National Energy System Operator in the UK, as part of their Regional Energy System Planning team, with base in the North West. Before that, I was a Strategic Insight Lead, leading in the development of the Future Energy Scenarios (with focus on supply-side generation and flexibility). I was also responsible for all the interactions with the rest of the Strategic Energy Network Planning Processes. I am a Chartered Engineer with the IET, for which I am also a Professional Registration Advisor. I am the Event Lead of Women's Network within NESO. Prior to NESO, I was working as a Lead Research Engineer at the R&D Department of EDF Energy in the UK. There, I specialised in designing algorithms to optimally invest or dispatch standalone or co-located battery storage assets with solar generation and/or load, when participating in multiple electricity markets. Before that, I was a Modelling Analyst at Energy Systems Catapult, working as part of their system integration and innovation team, modelling energy storage, second-life batteries and long-term electricity price forecasting for short-term markets. I hold a PhD from the Centre for Doctoral Training in Power Networks of The University of Manchester (UoM). My PhD research was centered around investment and optimal dispatch of battery storage assets, when co-located with wind generation. For the past three years, I have been the Industry Chair of UK's IET Energy Storage conference, part of the Powering Net Zero Series. I have a passion about diversity and inclusion, as well as good coding and data practices, and therefore I hold many relevent volunteering roles within and outside NESO.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/angeliki-l/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/AngelikiLk"><i class="fab fa-github"></i></a>
@@ -66,6 +66,21 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Technical Lead</h3>
+                            <div class="subheading mb-3">National Energy System Operator, Regional Energy Strategic Planning (RESP)</div>
+                                <p> Main tasks/achievements include: </p>
+                                <ul>
+                                    <li> Work on policy frameworks and guide methodological principles underpinning the RESP plans in all the 11 regions/nations</li>
+                                    <li> Understand and account for the interaction of these plans with other forms of strategic energy planning and reforms (connections, markets)</li>
+                                    <li> Enable delivery via effective engagement and analysis for the North West RESP plans while respecting Great Britain's national picture and plans</li>
+                                    <li> Event lead of NESO's Women's Network </li>
+                                </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Mid. June 2025 - Present</span></div>
+                    </div>
+                    
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Strategic Insight Lead</h3>
                             <div class="subheading mb-3">National Grid ESO, Strategy and Policy</div>
                                 <p> Main tasks/achievements include: </p>
@@ -79,7 +94,7 @@
                                     <li> Event lead of NESO's Women's Network </li>
                                 </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">October 2022 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">October 2022 - mid. June 2025</span></div>
                     </div>
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
