--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                     </ol>
                     <p>Inclusion, diversity and volunteering events</p>
                     <ol>
-                        <li> Exploring my journey from academia to industry and the strategic energy planning and the pivotal steps that led to chartership. Podcast <a href='https://open.spotify.com/episode/5XLyik5EgWLuRut8FQ6irV?si=f330ffff6cd14b0b&nd=1&dlsi=556edfd1db96402d'> here</a>. </li>
+                        <li> Exploring my journey from academia to industry and the strategic energy planning, as well as the pivotal steps that led to chartership. Podcast <a href='https://open.spotify.com/episode/5XLyik5EgWLuRut8FQ6irV?si=f330ffff6cd14b0b&nd=1&dlsi=556edfd1db96402d'> here</a>. </li>
                         <li> 'The route to continuous professional development', <a href="https://www.ieee-ukandireland.org/event/2nd-wie-career-development-workshop-electrical-and-electronic-engineering-career-path-to-net-zero/"> 2nd WIE Career Development Workshop</a> at Electrical and Electronic Engineering Career Path to Net Zero, Nottingham, October 2023</li>
                         <li> Transition from academia to industry for young professionals, Supergen Energy Storage Network Conference, October 2022</li>
                         <li> Panel discussion with IEEE PES Women in Power with theme "Inspiring the Next Generation of Female Engineers", September 2022</li>
