--- a/index.html
+++ b/index.html
@@ -587,9 +587,10 @@
                     <h2 class="mb-5">News</h2>
                     <p>Latest news include:</p>
                     <ul>
-                    <li> FES 2025 is out! For more details please see <a href="https://www.neso.energy/publications/future-energy-scenarios-fes">here</a> </li>
+                    <li> FES 2025 is out! For more details please see <a href="https://www.neso.energy/publications/future-energy-scenarios-fes">here</a>. </li>
                     <li> FES 2024 is out! Please also see my article around supply side generation and flexibility insights here: <a href="https://www.linkedin.com/pulse/fes-2024-eso-pathways-net-zero-angeliki-loukatou-jmocf/?trackingId=05PbQLIJpuUXat%2BzoDDilw%3D%3D">here</a>. </li>
-                    <li> Hooray! <a href="https://www.theiet.org/">IET</a> nominated me for the <a href="https://www.engc.org.uk/news/press-releases/2024/wes-2023-karen-burt-memorial-award-for-best-new-female-chartered-engineer-announced-as-dr-kelly-loukatou/">Karen Burt</a> 'Outstanding Chartered Female Engineer 2023' and and I won! It has been an honour to give the Karen Burt Memorial Lecture at London's Geological Society during December 2023. </li>
+                    <li> Hooray! <a href="https://www.theiet.org/">IET</a> nominated me for the <a href="https://www.engc.org.uk/news-and-insights/news/wes-2023-karen-burt-memorial-award">Karen Burt</a> 'Outstanding Chartered Female Engineer 2023' and and I won! It has been an honour to give the Karen Burt Memorial Lecture at London's Geological Society during December 2023. 
+                         NESO's article <a> href='https://www.linkedin.com/posts/nationalgrideso_huge-congratulations-to-angeliki-loukatou-activity-7141361331990929408-ymNk' here</a>.</li>
                     <li> FES 2023 is out and full of insights (July 2023). Please also see my article around flexibility insights here: <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085559426589278208/">here</a>. </li>                    
                     <li> I won the 'Outstanding Volunteer 2023' award from the IEEE Power and Energy Society of the UK and Ireland; for years of dedicated service to the society and to the power and energy sector (December 2023)</li>
                     </ul>
