--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     <h2 class="mb-5">Publications</h2>
                     <ol>
                         
-                        <li> Technical brochure on: "The Potential Roles of Energy Storage in Power Systems" <a href="https://www.e-cigre.org/publications/detail/970-the-potential-roles-of-energy-storage-in-power-systems.html"> here </a>. </li>
+                        <li> Technical brochure on - The Potential Roles of Energy Storage in Power Systems, <a href="https://www.e-cigre.org/publications/detail/970-the-potential-roles-of-energy-storage-in-power-systems.html"> Cigre C1 Working Committee</a>. </li>
                         <li> 
                              Future Energy Scenarios 2025 - Main author of the renewable energy generation, storage and interconnectors chapter, <a href="https://www.neso.energy/publications/future-energy-scenarios-fes"> NESO Publication</a>, July 2025. 
                          </li>
@@ -591,7 +591,7 @@
                     <ul>
                     <li> FES 2025 is out! For more details please see <a href="https://www.neso.energy/publications/future-energy-scenarios-fes">here</a>. </li>
                     <li> FES 2024 is out! Please also see my article around supply side generation and flexibility insights here: <a href="https://www.linkedin.com/pulse/fes-2024-eso-pathways-net-zero-angeliki-loukatou-jmocf/?trackingId=05PbQLIJpuUXat%2BzoDDilw%3D%3D">here</a>. </li>
-                    <li> Hooray! <a href="https://www.theiet.org/">IET</a> nominated me for the <a href="https://www.engc.org.uk/news-and-insights/news/wes-2023-karen-burt-memorial-award">Karen Burt</a> 'Outstanding Chartered Female Engineer 2023' and and I won! It has been an honour to give the Karen Burt Memorial Lecture at London's Geological Society during December 2023. NESO's article <a href="https://www.linkedin.com/posts/nationalgrideso_huge-congratulations-to-angeliki-loukatou-activity-7141361331990929408-ymNk" here</a>.</li>
+                    <li> Hooray! <a href="https://www.theiet.org/">IET</a> nominated me for the <a href="https://www.engc.org.uk/news-and-insights/news/wes-2023-karen-burt-memorial-award">Karen Burt</a> 'Outstanding Chartered Female Engineer 2023' and and I won! It has been an honour to give the Karen Burt Memorial Lecture at London's Geological Society during December 2023. NESO's article <a href="https://www.linkedin.com/posts/nationalgrideso_huge-congratulations-to-angeliki-loukatou-activity-7141361331990929408-ymNk"> here</a>.</li>
                     <li> FES 2023 is out and full of insights (July 2023). Please also see my article around flexibility insights here: <a href="https://www.linkedin.com/feed/update/urn:li:activity:7085559426589278208/">here</a>. </li>                    
                     <li> I won the 'Outstanding Volunteer 2023' award from the IEEE Power and Energy Society of the UK and Ireland; for years of dedicated service to the society and to the power and energy sector (December 2023)</li>
                     </ul>
